--- a/index.html
+++ b/index.html
@@ -6,6 +6,17 @@
     <title>Document</title>
 <title> alurabooks 
 <body>
+    <meta <head>
+        <meta charset="UTF-8">
+        <meta name="________" content="_______=device-width, ________=_______">
+        <title>AluraBooks</title>
     
+
+
+
+
+      }
+              
+
 </body>
 </html>
